--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,5 @@
+image:https://travis-ci.com/alphafoobar/code-kata-rust.svg?branch=master["Build Status", link="https://travis-ci.com/alphafoobar/code-kata-rust"]
+
 = code-kata-rust
 
 Built in Jetbrains CLion with the Rust plugin.
